# melis_dickinson_2023_figs

./: .gitignore  README.md  pyproject.toml
examples/: history_example.pkl  plot_loss.py  train_wing_hinge_cnn.py  training_loss.csv
melis_dickinson_2023_figs/: __init__.py  make_figures.py
notebook/: generate_figures.ipynb
notebook/.ipynb_checkpoints/: generate_figures-checkpoint.ipynb
notebook/weights/: muscle_encoder_weights_new.h5  wingkin_decoder_weights_new.h5
wing_hinge_cnn/: __init__.py  make_figures.py  wing_hinge_cnn.py
