[tool.poetry]
name = "wing-hinge-cnn"
version = "0.1.0"
description = "Wing hinge CNN for  Melis and Dickinson 2023."
license = "MIT"
authors = ["Johan Melis <jmelis@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.12.0"
keras = "2.12.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
notebook = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
